; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/mips/mti-malta/extr_malta-display.c_scroll_display_message.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/mips/mti-malta/extr_malta-display.c_scroll_display_message.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@display_string = common dso_local global i32* null, align 8
@display_count = common dso_local global i64 0, align 8
@max_display_count = common dso_local global i64 0, align 8
@mips_scroll_timer = common dso_local global i32 0, align 4
@jiffies = common dso_local global i64 0, align 8
@HZ = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @scroll_display_message to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @scroll_display_message(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i32*, i32** @display_string, align 8
  %4 = load i64, i64* @display_count, align 8
  %5 = add nsw i64 %4, 1
  store i64 %5, i64* @display_count, align 8
  %6 = getelementptr inbounds i32, i32* %3, i64 %4
  %7 = call i32 @mips_display_message(i32* %6)
  %8 = load i64, i64* @display_count, align 8
  %9 = load i64, i64* @max_display_count, align 8
  %10 = icmp eq i64 %8, %9
  br i1 %10, label %11, label %12

11:                                               ; preds = %1
  store i64 0, i64* @display_count, align 8
  br label %12

12:                                               ; preds = %11, %1
  %13 = load i64, i64* @jiffies, align 8
  %14 = load i64, i64* @HZ, align 8
  %15 = add nsw i64 %13, %14
  %16 = call i32 @mod_timer(i32* @mips_scroll_timer, i64 %15)
  ret void
}

declare dso_local i32 @mips_display_message(i32*) #1

declare dso_local i32 @mod_timer(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
